# Music-Player-J

./: .gitignore  Cargo.toml  README.md  build.rs
src/: controls.rs  full.rs  lib.rs  main.rs  portable.rs  song.rs  spogify.rs
