[package]
name = "spogify_v2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[profile.release]
debug = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = {version = "0.19.0", features = ["persistence"]}
epaint = "0.19.0"
rodio = {version = "0.15.0", features = ["symphonia-all"]}
rand = "0.8.5"
# id3 = "1.3.0"
mp4ameta = "0.11.0"         
winres = "0.1.12"
thin-vec = "0.2.8"
dhat = "0.3.0"
dirs = "4.0.0"
serde = "1.0.145"
serde_json = "1.0.85"
# embed-resource = "1.7.3"

[features]
dhat-heap = []    # if you are doing heap profiling

[build-dependencies]
winres = "0.1.12"
