[package]
name = "music_player_j"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.19.0"
eframe = {version = "0.19.0", features = ["persistence"]}
rodio = {version = "0.16.0", features = ["symphonia-all"]}
rand = "0.8.5"
id3 = "1.3.0"
mp4ameta = "0.11.0"         
winres = "0.1.12"
thin-vec = "0.2.8"
dirs = "4.0.0"
serde = "1.0.145"
serde_json = "1.0.85"
time = {version = "0.3.16", features = ["local-offset"]}
# infer = "0.9.0"
image = "0.24.3"
egui_extras = {version = "0.19.0", features = ["image"]}
# windows-sys = "0.42.0"
# embed-resource = "1.7.3"
magnum = { path = "D:\\Documents\\Code\\Github\\magnum-rs", features = ["with_rodio"]}
lofty = "0.9.0"
cpal = "0.14.2"
colorgrad = "0.6.2"

[dependencies.windows-sys]
version = "0.42.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Power",
    "Win32_System_SystemServices",
]

[build-dependencies]
winres = "0.1.12"

[profile.release.build-override]
codegen-units = 1